# faker

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  code-coverage.cmake  faker.pc.in  version.h.in
example/: CMakeLists.txt  main.cpp
include/faker/: business.h  computer.h  datetime.h  faker.h  location.h  number.h  payment.h  person.h  product.h  string.h
include/faker/internal/: bitwise_operators.h  macros.h
include/faker/types/: bilingual.h  enums.h
src/: CMakeLists.txt
src/core/: random_engine.cpp  random_engine.h
src/modules/business/: business.cpp  business_data.h
src/modules/computer/: computer.cpp  computer_data.h
src/modules/datetime/: datetime.cpp
src/modules/location/: location.cpp  location_data.h
src/modules/number/: number.cpp
src/modules/payment/: payment.cpp  payment_data.h
src/modules/person/: person.cpp  person_data.h
src/modules/product/: product.cpp  product_data.h
src/modules/string/: string.cpp  string_data.h
src/types/: bilingual.cpp
src/utils/: random_helper.cpp  random_helper.h  string_helper.cpp  string_helper.h  validation.cpp  validation.h
tests/: CMakeLists.txt  README_UnitTests.md
tests/modules/: test_business.cpp  test_computer.cpp  test_datetime.cpp  test_location.cpp  test_number.cpp  test_payment.cpp  test_person.cpp  test_product.cpp  test_string.cpp
tests/tests_helper/: tests_helper.h
tests/types/: test_bilingual.cpp
tests/utils/: test_random_helper.cpp  test_string_helper.cpp  test_validation.cpp
